Add French Translations [squashed]
French Translations
+ Expose hard coded strings

Change-Id: I77f23a6bbc68b718a1123f4785db09ea6c1804db

French Translations

Change-Id: I744aca4f33292a08110219cbfed35f3d1d007131

French Translations

Change-Id: Iddfcfaf0ba9745930e862e39c815fad36153a5be

Translations: Font names don't need to be translated

Change-Id: I17f9f9b934a42e47c5218c32f2bdf14dedb92e88

French Translations

- Change a hardcoded string to a translatable one

Change-Id: I35c0a38c32c04b886d2f97112c4bcc57fddbc01e

French Translations

Change-Id: Ifd8d8192eebf462ef9386bd514995ff5c5203372

French Translations

Change-Id: I6cdba37938f4bd9db024e16d8709d55d8b690308

French Translations

Change-Id: I33a3988e238e5d334d4377a5266724535ac03fee

Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -113,6 +113,8 @@
     <string name="accent_colors_red">Red</string>
     <string name="accent_colors_teal">Teal</string>
     <string name="accent_colors_yellow">Yellow</string>
+
+    <!-- Fancy Accents -->
     <string name="accent_colors_androidonegreen">AndroidOneGreen</string>
     <string name="accent_colors_cocacolared">CocaColaRed</string>
     <string name="accent_colors_discordpurple">DiscordPurple</string>
