--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,6 +31,14 @@
     <string name="rgb_accent_picker_title">RGB accent picker</string>
     <string name="rgb_accent_picker_summary">Choose the accent color yourself</string>
 
+    <!-- Navbar Picker -->
+    <string name="theme_navbar_picker_title">Navbar style</string>
+    <string name="theme_navbar_picker_summary">Select navbar style</string>
+    <string name="theme_navbar_picker_oneplus">OnePlus</string>
+    <string name="theme_navbar_picker_oneui">One UI</string>
+    <string name="theme_navbar_picker_tecno">Tecno Camon</string>
+    <string name="theme_navbar_picker_asus">ASUS</string>
+
     <!-- Dark theme -->
     <string name="dark_theme_title">Dark theme</string>
 
