DU-Themes: Introduce QS tile style picker [2/3].
Credits:
- DU for their extensible Themes app
- AquariOS for their fancy QS tile style picker

Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -184,5 +184,13 @@
     <string name="theme_schedule_toasts_title">Show toasts</string>
     <string name="theme_schedule_toasts_summary">Show toasts when scheduled themes are launched</string>
 
+    <!-- QS tile styles -->
+    <string name="theme_qsstyle_picker_title">QS tile style</string>
+    <string name="theme_qsstyle_picker_summary">Select QS tile style</string>
+    <string name="qstile_default">Default</string>
+    <string name="qstile_circle_trim">Circle with trim</string>
+    <string name="qstile_dual_tone_circle">Dual-toned circle</string>
+    <string name="qstile_squircle_trim">Squircle with trim</string>
+
 </resources>
 
