--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -100,7 +100,7 @@
     <string name="theme_switch_restore_font_type">Тип шрифта</string>
     <string name="theme_switch_restore_adaptative_icons">Адаптивные значки</string>
     <string name="theme_switch_restore_sb_icons">Значки строки состояния</string>
-    <string name="theme_switch_restore_navbar">Navigation bar</string>
+    <string name="theme_switch_restore_navbar">Панель навигации</string>
     <string name="theme_switch_restore_wallpaper">Фоновый рисунок</string>
     <string name="theme_backup_edittext_hint">Бэкап_</string>
     <string name="theme_backup_dialog_title">Обнаружены живые обои</string>
